--- a/index.html
+++ b/index.html
@@ -251,36 +251,49 @@
                 </div>
             </a>
 
-            <!-- Placeholder for future demos -->
-            <div class="demo-card" style="opacity: 0.6; pointer-events: none;">
-                <div class="demo-thumbnail" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-                    <span>🚀</span>
+            <!-- Cozy Cafe Demo -->
+            <a href="/webdesign/cozy-cafe/" class="demo-card">
+                <div class="demo-thumbnail" style="background: linear-gradient(135deg, #FF6B35 0%, #F7931E 100%);">
+                    <span>☕</span>
+                    <span class="new-badge">New</span>
                 </div>
                 <div class="demo-content">
-                    <h2 class="demo-title">Coming Soon</h2>
+                    <h2 class="demo-title">Cozy Corner Cafe</h2>
                     <p class="demo-description">
-                        More demo sites coming soon. Stay tuned for additional portfolio pieces.
+                        Warm family-friendly cafe website. Bright colors, playful design, interactive menu tabs, and daily specials section perfect for local cafes.
                     </p>
                     <div class="demo-tags">
-                        <span class="tag">Future</span>
+                        <span class="tag">Cafe</span>
+                        <span class="tag">Family Friendly</span>
+                        <span class="tag">Local Business</span>
                     </div>
+                    <span class="demo-link">
+                        View Demo →
+                    </span>
                 </div>
-            </div>
+            </a>
 
-            <div class="demo-card" style="opacity: 0.6; pointer-events: none;">
-                <div class="demo-thumbnail" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
-                    <span>💼</span>
+            <!-- Restaurant Demo -->
+            <a href="/webdesign/restaurant-demo/" class="demo-card">
+                <div class="demo-thumbnail" style="background: linear-gradient(135deg, #D4AF37 0%, #B8941F 100%);">
+                    <span>🍽️</span>
+                    <span class="new-badge">New</span>
                 </div>
                 <div class="demo-content">
-                    <h2 class="demo-title">Coming Soon</h2>
+                    <h2 class="demo-title">The Savory Table</h2>
                     <p class="demo-description">
-                        More demo sites coming soon. Stay tuned for additional portfolio pieces.
+                        Elegant fine dining restaurant website. Sophisticated dark theme with gold accents, interactive menu tabs, and reservation system.
                     </p>
                     <div class="demo-tags">
-                        <span class="tag">Future</span>
+                        <span class="tag">Restaurant</span>
+                        <span class="tag">Hospitality</span>
+                        <span class="tag">Reservations</span>
                     </div>
+                    <span class="demo-link">
+                        View Demo →
+                    </span>
                 </div>
-            </div>
+            </a>
         </div>
 
         <!-- Contact Section -->
