--- a/index.html
+++ b/index.html
@@ -228,11 +228,32 @@
         </div>
 
         <div class="demo-grid">
+            <!-- Neon Nights Bar Demo -->
+            <a href="/webdesign/bar-demo/" class="demo-card">
+                <div class="demo-thumbnail" style="background: linear-gradient(135deg, #FF006E 0%, #A855F7 100%);">
+                    <span>🎵</span>
+                    <span class="new-badge">New</span>
+                </div>
+                <div class="demo-content">
+                    <h2 class="demo-title">The Spot</h2>
+                    <p class="demo-description">
+                        Casual nightlife bar website. Subtle tones and events focused design.
+                    </p>
+                    <div class="demo-tags">
+                        <span class="tag">Nightlife</span>
+                        <span class="tag">Events</span>
+                        <span class="tag">Music Venue</span>
+                    </div>
+                    <span class="demo-link">
+                        View Demo →
+                    </span>
+                </div>
+            </a>
+
             <!-- Holt Brothers Inc Demo -->
             <a href="/webdesign/holt-brothers-inc/" class="demo-card">
                 <div class="demo-thumbnail">
                     <span>🏗️</span>
-                    <span class="new-badge">New</span>
                 </div>
                 <div class="demo-content">
                     <h2 class="demo-title">Holt Brothers Inc.</h2>
